codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__background_task_defaults_tests__command_center_new_draft_handoff.snap
---
source: tui/src/app/tests/background_task_defaults_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
owned=false
startup:


› draft during startup


attached:


› draft during startup

  GPT-6.1-Sol default · /tmp/project

owned=true
startup:

› draft during startup



attached:

› draft during startup

  GPT-6.1-Sol default · /tmp/project
