codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__background_task_defaults_tests__command_center_retained_worktree_error.snap
---
source: tui/src/app/tests/background_task_defaults_tests.rs
expression: "rendered.replace(&unused.root.display().to_string(), \"<worktree>\")"
---
  Unable to complete action
  Failed to start session: thread/start failed during TUI bootstrap: thread/start failed: replacement unavailable (code -32603) A checkout was retained at <worktree>; remove it with `git worktree remove <checkout-path>` from the source repository if it is no longer needed.


› 1. Return to command center

  enter select · esc back
